# ocls-core

./: CMakeLists.txt  README.md  burger1D.cls  burger2D.cls  sw.cls  sw_clean.cls
build_tools/: CMakeLists.txt  TxtToH.cpp
cmake/Modules/: FindOpenCL.cmake
demo/: CMakeLists.txt
demo/src/: burger1D.cpp  burger2D.cpp  cmain.c  main.cpp
doc/: Doxyfile  intro.dox
doc/sphinx/: Makefile  make.bat
doc/sphinx/source/: conf.py  index.rst  modules.rst  ocls_framework.rst
framework/: CMakeLists.txt
framework/include/: BoundaryFunction.h  CLSSource.h  CLSSourceLoader.h  CallableFunction.h  Collection.h  ComputeContext.h  Data.h  DataManager.h  Domain.h  FluxFunction.h  Framework.h  IntegratorFunction.h  KernelResources.h  Logger.h  Module.h  PerformanceAnalyzer.h  Program.h  ProgramBuilder.h  ProgramLauncher.h  ProgramManager.h  RenderContext.h  Utility.h
framework/kernels/: default.cl  dt.cl  header.cl  helper.cl  limiters.cl  reconstructors.cl  utility_kernels.cl
framework/src/: BoundaryFunction.cpp  CLSSource.cpp  CLSSourceLoader.cpp  Collection.cpp  ComputeContext.cpp  Data.cpp  DataManager.cpp  Domain.cpp  FluxFunction.cpp  Framework.cpp  IntegratorFunction.cpp  PerformanceAnalyser.cpp  Program.cpp  ProgramBuilder.cpp  ProgramLauncher.cpp  ProgramManager.cpp  RenderContext.cpp
modules/: CMakeLists.txt
modules/simple_plot/: CMakeLists.txt
modules/simple_plot/include/: BO.hpp  GLException.h  GLUtils.hpp  GraphPlot.h  Plot.h  Program.hpp  Shaders.h  SimplePlotModule.h  SurfacePlot.h  TextureFBO.h  VirtualTrackball.h  VolumePlot.h
modules/simple_plot/shaders/: graph_frag.glsl  graph_vert.glsl  surface_frag.glsl  surface_vert.glsl  volume_pone_frag.glsl  volume_pone_vert.glsl  volume_ptwo_frag.glsl  volume_ptwo_vert.glsl
modules/simple_plot/src/: GraphPlot.cpp  Plot.cpp  SimplePlotModule.cpp  SurfacePlot.cpp  TextureFBO.cpp  VirtualTrackball.cpp  VolumePlot.cpp
tests/: CMakeLists.txt
tests/src/: DataCreation_tests.h  RunTests.cpp  SourceLoading_tests.h
wrappers/: CMakeLists.txt
wrappers/c_framework/: CMakeLists.txt
wrappers/c_framework/include/: c_analyser.h  c_data.h  c_domain.h  c_framework.h  c_structures.h
wrappers/c_framework/src/: c_analyser.cpp  c_data.cpp  c_domain.cpp  c_framework.cpp
wrappers/c_visualizer/: CMakeLists.txt
wrappers/c_visualizer/include/: c_visualizer.h
wrappers/c_visualizer/src/: c_visualizer.cpp
wrappers/python_framework/: CMakeLists.txt  setup.py.in  setup_vis.py.in
wrappers/python_framework/interface/: framework_interface.i  visualizer_interface.i
wrappers/python_framework/src/ocls_framework/: __init__.py  ocls_framework.py
wrappers/python_framework/src/ocls_framework/analyser/: __init__.py
wrappers/python_framework/src/ocls_framework/compiler/: __init__.py  converters.py  handler.py
wrappers/python_framework/src/ocls_framework/functions/: __init__.py  boundary.py  integrator.py  numerical_flux.py
wrappers/python_framework/src/ocls_framework/tests/: __init__.py  test_ocls_framework.py
wrappers/python_framework/src/ocls_framework/visualizer/: __init__.py
