PROJECT(tests)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# - Find packages we need
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(OpenCL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLEWmx REQUIRED)
#FIND_PACKAGE(GLM REQUIRED)
PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)
IF(APPLE)
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	FIND_LIBRARY(IOKIT_LIBRARY IOKit)
ENDIF()

find_package(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)

#Set where executables end up
IF(NOT EXECUTABLE_OUTPUT_PATH)
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ENDIF(NOT EXECUTABLE_OUTPUT_PATH)

FIND_PATH(FRAMEWORK_INCLUDE_DIR NAMES Framework.h DOC "Path to directory where framework.h can be found")
FIND_LIBRARY(FRAMEWORK_LIBRARIES NAMES Framework.lib Framework.so DOC "Path to directory where framework libraries can be found")

INCLUDE_DIRECTORIES(
	${tests_SOURCE_DIR}/include
	${FRAMEWORK_INCLUDE_DIR}
	${CMAKE_CURRENT_BINARY_DIR})


LINK_DIRECTORIES(
	${FRAMEWORK_LIB_DIR})

ADD_EXECUTABLE(tests src/RunTests.cpp)
TARGET_LINK_LIBRARIES(tests
	${FRAMEWORK_LIBRARIES}
	${Boost_FILESYSTEM_LIBRARY}
	${Boost_SYSTEM_LIBRARY}
	${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
