CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(C_Framework)

IF(NOT LIBRARY_OUTPUT_PATH)
	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ENDIF(NOT LIBRARY_OUTPUT_PATH)

FIND_PATH(OCLS_INCLUDE_DIR NAMES Framework.h DOC "Path to directory where framework.h can be found")
FIND_LIBRARY(OCLS_STATIC_LIBRARIES NAMES Framework.obj Framework.a DOC "Path to directory where framework libraries can be found")

SET(OCLS_C_INCLUDE_DIR "${WRAPPER_DIR}/c_framework/include" CACHE PATH " ")

INCLUDE_DIRECTORIES(
	${OCLS_C_INCLUDE_DIR}
    ${OCLS_INCLUDE_DIR}
	${CMAKE_BINARY_DIR})

LINK_DIRECTORIES(
	${OCLS_LIB_DIR})

FILE(GLOB OCLS_C_SRC "src/*.cpp")
ADD_LIBRARY (CFramework SHARED ${OCLS_C_SRC})
TARGET_LINK_LIBRARIES(CFramework
	${OCLS_STATIC_LIBRARIES}_s)
SET_TARGET_PROPERTIES(CFramework PROPERTIES DEBUG_POSTFIX "d")
INSTALL(TARGETS CFramework DESTINATION framework/lib)

ADD_LIBRARY (CFramework_s STATIC ${OCLS_C_SRC})
TARGET_LINK_LIBRARIES(CFramework_s
	${OCLS_STATIC_LIBRARIES}_s)
SET_TARGET_PROPERTIES(CFramework_s PROPERTIES OUTPUT_NAME CFramework)
SET_TARGET_PROPERTIES(CFramework_s PROPERTIES DEBUG_POSTFIX "d")
INSTALL(TARGETS CFramework_s DESTINATION framework/lib)
