CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(C_Visualizer)

IF(NOT LIBRARY_OUTPUT_PATH)
	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ENDIF(NOT LIBRARY_OUTPUT_PATH)

FIND_PATH(OCLS_INCLUDE_DIR NAMES Framework.h DOC "Path to directory where framework.h can be found")

FIND_LIBRARY(OCLS_STATIC_LIBRARIES NAMES Framework.obj Framework.a DOC "Path to directory where framework libraries can be found")
FIND_LIBRARY(OCLS_LIBRARIES NAMES Framework.lib Framework.so DOC "Path to directory where framework libraries can be found")

FIND_PATH(OCLS_C_INCLUDE_DIR NAMES cframework.h DOC "Path to directory where framework.h can be found")
FIND_LIBRARY(OCLS_C_LIBRARIES NAMES CFramework.lib CFramework.so DOC "Path to directory where framework libraries can be found")
FIND_LIBRARY(OCLS_C_STATIC_LIBRARIES NAMES CFramework.obj CFrameworkd.obj CFramework.a CFrameworkd.a DOC "Path to directory where framework libraries can be found")

FIND_PATH(SIMPLE_PLOT_INCLUDE_DIR NAMES SimplePlotModule.h DOC "Path to directory where SimplePlotModule.h can be found")

FIND_LIBRARY(SIMPLE_PLOT_LIBRARY_DEBUG
	NAMES "SimplePlotd.obj" "libSimplePlotd.a"
	PATHS "${PROJECT_SOURCE_DIR}/modules/lib/")
FIND_LIBRARY(SIMPLE_PLOT_LIBRARY_RELEASE
	NAMES "SimplePlot.obj" "libSimplePlot.a"
	PATHS "${PROJECT_SOURCE_DIR}/modules/lib/")

IF(NOT SIMPLE_PLOT_LIBRARY_DEBUG AND NOT SIMPLE_PLOT_LIBRARY_RELEASE)
	SET(SIMPLE_PLOT_LIBRARIES SimplePlot CACHE FILEPATH " " FORCE)
	LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
ELSE()
	SET(SIMPLE_PLOT_LIBRARIES debug ${SIMPLE_PLOT_LIBRARY_DEBUG} optimized ${SIMPLE_PLOT_LIBRARY_RELEASE} CACHE FILEPATH "Path to SimplePlot libraries")
ENDIF()

SET(C_VISUALIZER_INCLUDE_DIR "${WRAPPER_DIR}/c_visualizer/include" CACHE PATH " ")

INCLUDE_DIRECTORIES(
	${C_VISUALIZER_INCLUDE_DIR}
    ${OCLS_INCLUDE_DIR}
    ${OCLS_C_INCLUDE_DIR}
    ${SIMPLE_PLOT_INCLUDE_DIR}
	${CMAKE_CURRENT_BINARY_DIR})

LINK_DIRECTORIES(
	${OCLS_LIB_DIR}
	${MODULE_LIB_DIR})

FILE(GLOB C_VISUALIZER_SRC "src/*.cpp")
ADD_LIBRARY (CVisualizer SHARED ${C_VISUALIZER_SRC})
TARGET_LINK_LIBRARIES(CVisualizer
	${OCLS_STATIC_LIBRARIES}_s
	${SIMPLE_PLOT_LIBRARIES})
SET_TARGET_PROPERTIES(CVisualizer PROPERTIES DEBUG_POSTFIX "d")
INSTALL(TARGETS CVisualizer DESTINATION framework/lib)

ADD_LIBRARY (CVisualizer_s STATIC ${C_VISUALIZER_SRC})
TARGET_LINK_LIBRARIES(CVisualizer_s
	${OCLS_STATIC_LIBRARIES}_s
	${SIMPLE_PLOT_LIBRARIES})
SET_TARGET_PROPERTIES(CVisualizer_s PROPERTIES OUTPUT_NAME CVisualizer)
SET_TARGET_PROPERTIES(CVisualizer_s PROPERTIES DEBUG_POSTFIX "d")
INSTALL(TARGETS CVisualizer_s DESTINATION framework/lib)
